--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-main-title: "PHOT&#8226;O&#8226;RAMA"
-subtitle: "Photo Journal"
-description: "Photography and more"
+main-title: "OASISNOE&#8226;TRAVEL&#8226;PHOTO"
+subtitle: "Travel Journal"
+description: "Photography and Guide"
 images:
  - image_path: /img/slider/home01.jpg
    gallery-folder: /img/slider/
