--- a/about/index.html
+++ b/about/index.html
@@ -9,6 +9,12 @@ header-img: "img/about-bg.jpg"
 <h1>CREDITS</h1>
 <br>
 <br>
+<h3>
+    <a>Notice: </a>
+    If you wish to use my photo, kindly disclose its origin and reference this website.
+</h3>
+<br>
+<br>
 <h4>The posts were written and exported as markdown ready for publication with <a href="http://dillinger.io/">Dillinger</a>, a useful online editor.</h4>
 <br>
 <h4>All the commits were performed with the help of <a href="https://www.sourcetreeapp.com/">Source Tree</a> app.</h4>
@@ -19,4 +25,3 @@ header-img: "img/about-bg.jpg"
 
 
 <br>
-<h6><p>Image Source: <a href="https://unsplash.com/photos/Dwheufds6kQ/">Unsplash</a></p></h6>
