--- a/about/index.html
+++ b/about/index.html
@@ -11,17 +11,13 @@ header-img: "img/about-bg.jpg"
 <br>
 <h3>
     <a>Notice: </a>
-    If you wish to use my photo, kindly disclose its origin and reference this website.
 </h3>
 <br>
+<h4>
+    If you wish to use my photo, kindly disclose its origin and reference this website.
+</h4>
 <br>
-<h4>The posts were written and exported as markdown ready for publication with <a href="http://dillinger.io/">Dillinger</a>, a useful online editor.</h4>
-<br>
-<h4>All the commits were performed with the help of <a href="https://www.sourcetreeapp.com/">Source Tree</a> app.</h4>
-<br> 
-<h4>The photos are organised in galleries with <a href="https://github.com/metafizzy/isotope">ISOTOPE</a>.</h4>
-<br>
-<h4>The search overlay function code lies in <a href="https://github.com/chinchang/super-search">SUPER SEARCH</a>.</h4>
-
-
+<h5>
+    Thank u : -)
+</h5>
 <br>
