doc: change Album and Archive images.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 main-title: "OASISNOE&#8226;J&#8226;PHOTO"
-subtitle: "Oasisnoe Travel Photo & Journal"
+subtitle: "YIN's Travel Photo & Journal"
 description: "Photography and Guide"
 images:
  - image_path: /img/slider/home01.jpg
