--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -1,20 +1,17 @@
 ---
 layout: page
 title: "album"
-description: "masonry"
+description: "Indonesia"
 active: gallery
 header-img: "img/gallery-bg.jpg"
-album-title: "my 1st album"
+album-title: "My album in Indonesia"
 images:
  - image_path: /gallery/archive/g01/bg1.jpg
    caption: IMAGE TITLE
-   copyright: © photorama
+   copyright: © YIN YILING
  - image_path: /gallery/archive/g01/bg2.jpg
    caption: IMAGE TITLE
-   copyright: © photorama
- - image_path: /gallery/archive/g01/bg3.jpg
-   caption: IMAGE TITLE
-   copyright: © photorama
+   copyright: © YIN YILING
 ---
 
 <html class="no-js" lang="en">
