--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,39 +8,15 @@ images:
  - image_path: /gallery/albums/alb01.jpg
    gallery-folder: /gallery/gallery01/
    gallery-name: gallery1
-   gallery-date: July 2015
+   gallery-date: FEB 2024
  - image_path: /gallery/albums/alb02.jpg
+   gallery-folder: /gallery/gallery01/
+   gallery-name: gallery1
+   gallery-date: FEB 2024
+ - image_path: /gallery/albums/alb01.jpg
    gallery-folder: /gallery/gallery02/
    gallery-name: gallery2
-   gallery-date: June 2015
- - image_path: /gallery/albums/alb03.jpg
-   gallery-folder: /gallery/gallery03/
-   gallery-name: gallery3
-   gallery-date: May 2015
- - image_path: /gallery/albums/alb04.jpg
-   gallery-folder: /gallery/gallery04/
-   gallery-name: gallery4
-   gallery-date: April 2015
- - image_path: /gallery/albums/alb05.jpg
-   gallery-folder: /gallery/gallery05/
-   gallery-name: gallery5
-   gallery-date: March 2015
- - image_path: /gallery/albums/alb06.jpg
-   gallery-folder: /gallery/gallery06/
-   gallery-name: gallery6
-   gallery-date: February 2015
- - image_path: /gallery/albums/alb07.jpg
-   gallery-folder: /gallery/gallery07/
-   gallery-name: gallery7
-   gallery-date: January 2015
- - image_path: /gallery/albums/alb08.jpg
-   gallery-folder: /gallery/gallery08/
-   gallery-name: gallery8
-   gallery-date: December 2014
- - image_path: /gallery/albums/alb09.jpg
-   gallery-folder: /gallery/gallery09/
-   gallery-name: gallery9
-   gallery-date: November 2014
+   gallery-date: FEB 2024
 ---
 
 <html class="no-js" lang="en">
@@ -88,7 +64,7 @@ images:
 
 
 <br>
-<h6><p>Image Source: <a href="https://unsplash.com/photos/YOT6kS8YtEA/">Unsplash</a></p></h6>
+<h6><p>By: <a>YIN YILING</a></p></h6>
 
 <!-- jQuery -->    
 
