doc: change Journal.

--- a/journal/index.html
+++ b/journal/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 description: "Journal"
-title: "Writings"
+title: "Records"
 active: journal
 header-img: "img/writing-bg.jpg"
 ---
@@ -81,6 +81,6 @@ header-img: "img/writing-bg.jpg"
 {% endif %}
 
 <br>
-<h6>Image Source: <a href="https://unsplash.com/photos/8muUTAmcWU4">UNSPLASH</a>
+<h6>BY: <a>YIN YILING</a>
 
 </body>
