--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -4,7 +4,7 @@ title: "album"
 description: "Indonesia"
 active: gallery
 header-img: "img/gallery-bg.jpg"
-album-title: "My album in Indonesia"
+album-title: "Indonesia"
 images:
  - image_path: /gallery/archive/g01/bg1.jpg
    caption: IMAGE TITLE
