--- a/journal/index.html
+++ b/journal/index.html
@@ -8,6 +8,12 @@ header-img: "img/writing-bg.jpg"
 
 <head>
 <link rel="stylesheet" href="{{ site.baseurl }}/css/journal.css" media="screen" />
+<style>
+  .img-custom-size {
+    width: 1260px;
+    height: 860px;
+  }
+  </style>
 </head>
 
 <body class="journal">
@@ -37,7 +43,7 @@ header-img: "img/writing-bg.jpg"
     
 <a href="{{ post.url | prepend: site.baseurl }}">
         {% if post.image.feature %}
-	<img src="{{ site.baseurl }}/img/postcover/{{ post.image.feature }}">
+	<img class="img-custom-size" src="{{ site.baseurl }}/img/postcover/{{ post.image.feature }}">
 	{% endif %}
  
  
