doc: update iamge custom size.

--- a/journal/index.html
+++ b/journal/index.html
@@ -10,8 +10,8 @@ header-img: "img/writing-bg.jpg"
 <link rel="stylesheet" href="{{ site.baseurl }}/css/journal.css" media="screen" />
 <style>
   .img-custom-size {
-    width: 1260px;
-    height: 860px;
+    width: 1260px !important;
+    height: 860px !important;
   }
   </style>
 </head>
