--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -1,12 +1,24 @@
 ---
 layout: page
 title: "album"
-description: "Indonesia"
+description: "Nepal"
 active: gallery
 header-img: "img/gallery-bg.jpg"
-album-title: "Indonesia"
+album-title: "Nepal"
 images:
  - image_path: /gallery/archive/g01/pc001.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g01/pc002.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g01/pc003.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g01/pc004.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g01/pc005.jpg
    caption: IMAGE TITLE
    copyright: © YIN YILING
 ---
