--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -1,14 +1,25 @@
 ---
 layout: page
 title: "album"
-description: "masonry"
+description: "Teaching Volunteer"
 active: gallery
 header-img: "img/gallery-bg.jpg"
-album-title: "KULU LUMPUR(MALAYSIA)"
+album-title: "Volunteer"
 images:
  - image_path: /gallery/archive/g02/pc001.jpg
    caption: IMAGE TITLE
-   mfp-title: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g02/pc002.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g02/pc003.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g02/pc004.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g02/pc005.jpg
+   caption: IMAGE TITLE
    copyright: © YIN YILING
 ---
 
