--- a/gallery/gallery03/index.html
+++ b/gallery/gallery03/index.html
@@ -9,6 +9,18 @@ images:
  - image_path: /gallery/archive/g03/pc001.jpg
    caption: IMAGE TITLE
    copyright: © YIN YILING
+ - image_path: /gallery/archive/g03/pc002.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g03/pc003.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g03/pc004.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
+ - image_path: /gallery/archive/g03/pc005.jpg
+   caption: IMAGE TITLE
+   copyright: © YIN YILING
 ---
 
 <html class="no-js" lang="en">
