--- a/about/index.html
+++ b/about/index.html
@@ -13,9 +13,15 @@ header-img: "img/about-bg.jpg"
     <a>Notice: </a>
 </h3>
 <br>
-<h4>
-    If you wish to use my photo, kindly disclose its origin and reference this website.
-</h4>
+<div style="font-size: 20px;">
+    <p>
+        If you wish to use my photo, kindly disclose its origin and reference this website.
+    </p>
+    <p>
+        如果您想使用我的照片，请您披露它的来源，并引用此网站。
+    </p>
+</div>
+
 <br>
 <h5>
     Thank u : -)
