doc: remove index.html subtitle.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-main-title: "OASISNOE&#8226;J&#8226;"
-subtitle: "YIN's Travel Photo & Journal"
-description: "Photography and Guide"
+main-title: "OASISNOE&#8226;J"
+subtitle: ""
+description: "Photography and Stories"
 images:
  - image_path: /img/slider/home01.jpg
    gallery-folder: /img/slider/
