doc: add infomation in about.html page.

--- a/about/index.html
+++ b/about/index.html
@@ -11,6 +11,7 @@ header-img: "img/about-bg.jpg"
 <br>
 <h3>
     <a>Notice: </a>
+    <a>注意: </a>
 </h3>
 <br>
 <div style="font-size: 20px;">
@@ -19,6 +20,12 @@ header-img: "img/about-bg.jpg"
     </p>
     <p>
         如果您想使用我的照片，请您披露它的来源，并引用此网站。
+    </p>
+    <p>
+        If you enjoy my stories, please subscribe to my travel blog by entering your email below and clicking the subscribe button.
+    </p>
+    <p>
+        如果您喜欢我的故事，请在下方输入您的电子邮件并点击订阅按钮，订阅我的旅游博客。
     </p>
 </div>
 
