doc: add extra infomation in gallery and journal page.

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -65,9 +65,20 @@ images:
 
 
 	<br>
-	<h6>
-		<p>By: <a>YIN YILING</a></p>
-	</h6>
+  <!-- EXTRA INFO -->
+  <div style="font-size: 14px;">
+    <p>
+    Placeholder text by <a> <strong>YIN YILING</strong></a>.
+    Photography by <a><strong>YIN YILING</strong></a>.
+    </p>
+    <p>
+    If you enjoy my stories, please subscribe to my travel blog by entering your email below and clicking the subscribe button.
+    </p>
+    <p>
+    如果您喜欢我的故事，请在下方输入您的电子邮件并点击订阅按钮，订阅我的旅行博客 ⬇️
+    </p>
+  </div>
+   <!-- ---------- -->
 
 	<!-- jQuery -->
 
