[doc]: change section upper background.

--- a/journal/index.html
+++ b/journal/index.html
@@ -3,7 +3,7 @@ layout: page
 description: "Journal"
 title: "Records"
 active: journal
-header-img: "img/writing-bg.jpg"
+header-img: "img/writing-bg2.jpg"
 ---
 
 <!-- HEAD CONTENT SECTION -->
