--- a/visa/index.html
+++ b/visa/index.html
@@ -3,7 +3,7 @@ layout: page
 description: "Visa"
 title: "Records"
 active: visa
-header-img: "img/writing-bg.jpg"
+header-img: "img/writing-bg1.jpg"
 ---
 
 <!-- HEAD CONTENT SECTION -->
