--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "ALBUMS"
 description: "archive"
 active: gallery
-header-img: "img/gallery-bg.jpg"
+header-img: "img/writing-bg1.jpg"
 images:
  - image_path: /gallery/albums/alb01.jpg
    gallery-folder: /gallery/gallery01/
