[doc]: add Thailand Journal.

--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "album"
 description: "Teaching Volunteer"
 active: gallery
-header-img: "img/gallery-bg.jpg"
+header-img: "img/writing-bg1.jpg"
 album-title: "Volunteer"
 images:
  - image_path: /gallery/archive/g02/pc001.jpg
