--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -3,7 +3,7 @@ layout: page
 title: "album"
 description: "Nepal"
 active: gallery
-header-img: "img/gallery-bg.jpg"
+header-img: "img/writing-bg2.jpg"
 album-title: "Nepal"
 images:
  - image_path: /gallery/archive/g01/pc001.jpg
