[doc]: change author with correct format.

--- a/about/index.html
+++ b/about/index.html
@@ -34,5 +34,5 @@ header-img: "img/about-bg.jpg"
     Thank u : -)
 </h5>
 <br>
-<h6>BY: <a>YIN YILING</a></h6>
+<h6>BY: <a>YILING YIN</a></h6>
 <br>
