--- a/gallery/gallery01/index.html
+++ b/gallery/gallery01/index.html
@@ -8,19 +8,19 @@ album-title: "Nepal"
 images:
  - image_path: /gallery/archive/g01/pc001.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g01/pc002.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g01/pc003.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g01/pc004.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g01/pc005.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
 ---
 
 <html class="no-js" lang="en">
