--- a/gallery/gallery02/index.html
+++ b/gallery/gallery02/index.html
@@ -8,19 +8,19 @@ album-title: "Volunteer"
 images:
  - image_path: /gallery/archive/g02/pc001.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g02/pc002.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g02/pc003.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g02/pc004.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
  - image_path: /gallery/archive/g02/pc005.jpg
    caption: IMAGE TITLE
-   copyright: © YIN YILING
+   copyright: © YILING YIN
 ---
 
 <html class="no-js" lang="en">
