--- a/visa/index.html
+++ b/visa/index.html
@@ -99,8 +99,8 @@ header-img: "img/writing-bg1.jpg"
   <!-- EXTRA INFO -->
   <div style="font-size: 14px;">
     <p>
-    Placeholder text by <a> <strong>YIN YILING</strong></a>.
-    Photography by <a><strong>YIN YILING</strong></a>.
+    Placeholder text by <a> <strong>YILING YIN</strong></a>.
+    Photography by <a><strong>YILING YIN</strong></a>.
     </p>
     <p>
     If you enjoy my stories, please subscribe to my travel blog by entering your email below and clicking the subscribe button.
