[doc]: update subscribe information.

--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@ header-img: "img/about-bg.jpg"
         如果您想使用我的照片，请您披露它的来源，并引用此网站。
     </p>
     <p>
-        If you enjoy my stories, please subscribe to my travel blog by entering your email below and clicking the subscribe button.
+        If you enjoyed my story, feel free to enter your email below and hit subscribe to be the first to receive more exciting travel updates and exclusive content!
     </p>
     <p>
         如果您喜欢我的故事，请在下方输入您的电子邮件并点击订阅按钮，订阅我的旅游博客。
