[doc]: update about me page content.

--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@ header-img: "img/about-bg.jpg"
         If you enjoyed my story, feel free to enter your email below and hit subscribe to be the first to receive more exciting travel updates and exclusive content!
     </p>
     <p>
-        如果您喜欢我的故事，请在下方输入您的电子邮件并点击订阅按钮，订阅我的旅游博客。
+        如果您喜欢我的故事，不妨在下方输入您的电子邮件并点击订阅按钮，第一时间获取最新旅游分享、独家攻略和隐藏美景！
     </p>
 </div>
 
