--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@ header-img: "img/about-bg.jpg"
         如果您想使用我的照片，请您披露它的来源，并引用此网站。
     </p>
     <p>
-        If you enjoyed my story, feel free to enter your email below and hit subscribe to be the first to receive more exciting travel updates and exclusive content!
+        If you enjoy my stories, feel free to enter your email below and click the subscribe button to receive the latest travel updates, exclusive guides, and hidden gems firsthand!    
     </p>
     <p>
         如果您喜欢我的故事，不妨在下方输入您的电子邮件并点击订阅按钮，第一时间获取最新旅游分享、独家攻略和隐藏美景！
