[doc]: add slider images.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@ images:
    gallery-folder: /img/slider/   
  - image_path: /img/slider/home05.jpg
    gallery-folder: /img/slider/     
+ - image_path: /img/slider/home06.jpg
+   gallery-folder: /img/slider/  
+ - image_path: /img/slider/home07.jpg
+   gallery-folder: /img/slider/     
+ - image_path: /img/slider/home08.jpg
+   gallery-folder: /img/slider/ 
+ - image_path: /img/slider/home09.jpg
+   gallery-folder: /img/slider/   
+ - image_path: /img/slider/home10.jpg
+   gallery-folder: /img/slider/   
+ - image_path: /img/slider/home11.jpg
+   gallery-folder: /img/slider/  
+ - image_path: /img/slider/home12.jpg
+   gallery-folder: /img/slider/ 
+ - image_path: /img/slider/home13.jpg
+   gallery-folder: /img/slider/ 
+ - image_path: /img/slider/home14.jpg
+   gallery-folder: /img/slider/ 
+ - image_path: /img/slider/home15.jpg
+   gallery-folder: /img/slider/ 
 ---
 
 <html class="no-js" lang="en">
